evidence/cli/05-server-nsg-rules.json
[
  {
    "access": "Allow",
    "description": "Allow RDP from the management subnet to servers",
    "destinationAddressPrefix": "10.0.0.0/24",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "3389",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"4b08b760-bdc0-4c04-bb18-1e61092b0ff4\"",
    "id": "/subscriptions/556a20c8-be46-426e-b7ab-2bad03584e3a/resourceGroups/rg-nordicit-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-server-subnet/securityRules/Allow-RDP-From-Management",
    "name": "Allow-RDP-From-Management",
    "priority": 100,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nordicit-lab",
    "sourceAddressPrefix": "10.0.2.0/24",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "description": "Allow DNS queries from client subnet over UDP",
    "destinationAddressPrefix": "10.0.0.0/24",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "53",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"4b08b760-bdc0-4c04-bb18-1e61092b0ff4\"",
    "id": "/subscriptions/556a20c8-be46-426e-b7ab-2bad03584e3a/resourceGroups/rg-nordicit-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-server-subnet/securityRules/Allow-DNS-From-Clients-UDP",
    "name": "Allow-DNS-From-Clients-UDP",
    "priority": 110,
    "protocol": "Udp",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nordicit-lab",
    "sourceAddressPrefix": "10.0.1.0/24",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "description": "Allow DNS queries from client subnet over TCP",
    "destinationAddressPrefix": "10.0.0.0/24",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "53",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"4b08b760-bdc0-4c04-bb18-1e61092b0ff4\"",
    "id": "/subscriptions/556a20c8-be46-426e-b7ab-2bad03584e3a/resourceGroups/rg-nordicit-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-server-subnet/securityRules/Allow-DNS-From-Clients-TCP",
    "name": "Allow-DNS-From-Clients-TCP",
    "priority": 120,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nordicit-lab",
    "sourceAddressPrefix": "10.0.1.0/24",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  }
]
